--- a/src/iframe.html
+++ b/src/iframe.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Background Iframe</title>
+    <title>Iframe</title>
   </head>
   <body>
-    <script src="./background.ts" type="module"></script>
+    <script src="./iframe.ts" type="module"></script>
   </body>
 </html>
